always apply a 0 transform to content to avoid weird chrome z-index bug

--- a/public/src/app/mountainscape-page/mountainscape-page.component.css
+++ b/public/src/app/mountainscape-page/mountainscape-page.component.css
@@ -85,6 +85,11 @@
   background-repeat: repeat-x;
 }
 .content {
+  -webkit-transform: translate3D(0,0,0);
+  -moz-transform: translate3D(0,0,0);
+  -ms-transform: translate3D(0,0,0);
+  -o-transform: translate3D(0,0,0);
+  transform: translate3D(0,0,0);
   position: relative;
   top:-850px;
   min-height: 400px;
